# JobWeaver

./: .env.example  .gitignore  Heuristic_search.py  Pagination.py  README.md  WebScrape.py  career_listings.txt  config.env  cosine_similarity.py  crawl_url_bfs.py  crawler.py  crawler_bfs.py  crawler_custom.py  extract_jobs.py  job_details.json  lifepoint_jobs.csv  lifepoint_jobs.json  lifepoint_jobs_filtered.json  llmIntegrations.py  llm_outputs.json  output.md  pagination_crawl.py  physicianXworkflow.drawio  pyproject.toml  test.py  test2.py  total_jobs.csv  xyz.csv
IntermediateArtifacts/: career_listings.txt  job_details.json  llm_outputs.json  xyz.csv
TEST/: test1.py
examples/: pipeline_example.py
src/: __init__.py
src/physicianx/: __init__.py  listing_cache.py  models.py  observability.py  url.py
src/physicianx/cli/: main.py
src/physicianx/config/: __init__.py  pipeline.py  settings.py
src/physicianx/llm/: __init__.py  lm.py  session.py  usage.py
src/physicianx/persistence/: __init__.py  schema.py
src/physicianx/pipeline/: __init__.py  job_detail_llm.py  job_link_scraper.py  listing_heuristics.py  listing_llm.py  runner.py
src/physicianx/web/: __init__.py  (+3 more)
tests/: test_pipeline_contracts.py
tests/integration/: test_worker_imports.py
tests/unit/: test_domain_url.py  test_job_details_output_validator.py  test_job_listing_output_validator.py  test_litellm_adapter.py  test_llm_factory.py  test_lm_session.py  test_structured_llm_stages.py  test_validator_registry.py
utils/: job_listing_llm_preprocess.py  jobs_extraction_llm.py  normalize_url.py
(+20 files in other folders)
