[tool.poetry]
name = "physicianx"
version = "0.1.0"
description = "job discovery/extraction pipeline (worker-first)."
authors = ["physicianx <dev@local>"]
readme = "README.md"
packages = [{ include = "physicianx", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
celery = "^5.5.0"
redis = "^5.2.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.50.0"
google-genai = "^1.70.0"
litellm = "^1.51.0"
aiofiles = "^24.1.0"
python-dotenv = "^1.0.1"
regex = "^2024.11.6"
requests = "^2.33.0"

# NOTE: crawl4ai is used by the pipeline. If it's not published on PyPI for your platform,
# we may need to pin via git/url or document installation separately.
crawl4ai = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
pytest = "^8.3.0"

[tool.poetry.scripts]
physicianx = "physicianx.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

